--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Blog_Application
 
 spring.datasource.url=jdbc:mysql://localhost:3306/blog_db
 spring.datasource.username=root
-spring.datasource.password=Mysql@123
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
